[package]
name = "backup-brogue"
version = "0.1.0"
authors = ["Steve Cooper <steve.cooper@anaplan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "3.0"
notify = "4.0"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
strum = "0.23"
strum_macros = "0.23"
notify-rust = "4.5"
thiserror = "1.0"
tokio = { version= "1.14", features = ["full"] }
crossterm = "0.23"
tui = "0.17"